infra/kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: owtf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: db
        image: postgres:alpine
        volumeMounts:
          - name: db-volume
            mountPath: /db
        ports:
        - containerPort: 5432
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "200m"  
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: db-pvc
