infra/kubernetes/owtf-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owtf-backend-service
  namespace: owtf
  labels:
    app: owtf-backend
    component: backend
spec:
  selector:
    app: owtf-backend
    component: backend
  ports:
    - name: api
      protocol: TCP
      port: 8008
      targetPort: 8008
    - name: proxy
      protocol: TCP
      port: 8010
      targetPort: 8010
  type: ClusterIP
