infra/kubernetes/owtf-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owtf-frontend-service
  namespace: owtf
  labels:
    app: owtf-frontend
    component: frontend
spec:
  selector:
    app: owtf-frontend
    component: frontend
  ports:
    - name: http
      protocol: TCP
      port: 8019
      targetPort: 8019
  type: LoadBalancer
